# ILI9342-TFT-LCD-Driver

./: .gitignore  DEVELOPMENT.md  README.md  build.cmd  platformio.ini
example/: CMakeLists.txt  README.md  build.cmd  client.cpp
include/: ili9342.h  usb_image.h
lib/esp_lcd/: lcd.c  lcd.h
src/: ili9342.c  main.c  usb_image.c
tools/: README.md  flash.bat  flash.ps1  flash.sh
